# dragon-raja-rpg

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  index.html  main.js  package-lock.json  package.json
.claude/: settings.local.json
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: release.yml
.omc/: project-memory.json
.omc/state/: agent-replay-5965e18d-402b-4164-967c-cc17aa27fa9b.jsonl  hud-state.json  hud-stdin-cache.json  idle-notif-cooldown.json  last-tool-error.json  subagent-tracking.json
.omc/state/checkpoints/: checkpoint-2026-04-19T04-47-41-240Z.json
game/: bundle.js  data.js  engine.js  pixel-art.js
scripts/: balance-test-lv100.js  balance-test-simple.js  balance-test.js  debug-attack.js  debug-combat-many.js  debug-combat.js  qa-harness.js  test-fix.js
server/: .gitignore  README.md  index.js  package.json
src-tauri/: Cargo.toml  README.md  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
